--- a/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
+++ b/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
@@ -312,7 +312,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -328,6 +327,52 @@
     "heading_collapsed": true
    },
    "source": [
+    "### <span style='color:DarkBlue'> Connecting to SMTP. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    import smtplib\n",
+    "\n",
+    "    smtp_object = smtplib.SMTP('smtp.gmail.com',587)\n",
+    "\n",
+    "    smtp_object.ehlo()\n",
+    "\n",
+    "    smtp_object.starttls()\n",
+    "\n",
+    "    import getpass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "     email = getpass.getpass(\"Email: \")\n",
+    "     password = getpass.getpass(\"Password: \")\n",
+    "     smtp_object.login(email,password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
     "### <span style='color:blue'> Sending Email using sendmail method. </span>"
    ]
   },
@@ -336,23 +381,31 @@
    "metadata": {
     "hidden": true
    },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
-    "Now we can send an email using the .sendmail() method."
+    "    from_address = \"pkazeez@gmail.com\"\n",
+    "    to_address = \"pkazeez@outlook.com\"\n",
+    "    subject = input(\"Enter the subject line: \" )\n",
+    "    message = input(\"enter the body message\")\n",
+    "    msg = \"Subject:   \"+subject+'\\n' +message"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -451,83 +504,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:Brown'> Excercise. </span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "import smtplib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smtp_object = smtplib.SMTP('smtp.gmail.com',587)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(250,\n",
-       " b'smtp.gmail.com at your service, [223.227.113.200]\\nSIZE 35882577\\n8BITMIME\\nSTARTTLS\\nENHANCEDSTATUSCODES\\nPIPELINING\\nCHUNKING\\nSMTPUTF8')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smtp_object.ehlo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(220, b'2.0.0 Ready to start TLS')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smtp_object.starttls()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import smtplib\n",
+    "\n",
+    "smtp_object = smtplib.SMTP('smtp.gmail.com',587)\n",
+    "\n",
+    "smtp_object.ehlo()\n",
+    "\n",
+    "smtp_object.starttls()\n",
+    "\n",
     "import getpass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -544,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# password"
@@ -553,30 +563,127 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    " "
+    "email = getpass.getpass(\"Email: \")\n",
+    "\n",
+    " password = getpass.getpass(\"Password: \")\n",
+    "\n",
+    "smtp_object.login(email,password)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#   Sending email:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "from_address = \"pkazeez@gmail.com\"\n",
+    "\n",
+    "to_address = \"pkazeez@outlook.com\"\n",
+    "\n",
+    "subject = input(\"Enter the subject line: \" )\n",
+    "message = input(\"enter the body message\")\n",
+    "msg = \"Subject:   \"+subject+'\\n' +message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smtp_object.sendmail(from_address,to_address,msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "hidden": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(220, b'2.0.0 Ready to start TLS')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "server = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "server.starttls()\n",
+    "# server.login(from_addr, 'password') # here you can need to use app passwor\n",
+    "\n",
+    "\n",
+    "server.login(\"gmail address@gmail.com\", 'Use App password here') # here you can need to use app passwor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
