--- a/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
+++ b/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
@@ -4,15 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:brown'> Overview of Received Emails. </span>"
+    "# <span style='color:DarkCyan'> Overview of Received Emails. </span>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -23,14 +16,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### <span style='color:LightSeaGreen'> imaplib. </span>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -41,7 +39,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -52,7 +51,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -63,7 +63,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -73,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,7 +96,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -103,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -138,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -162,7 +170,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### <span style='color:blue'> Searching Mail. </span>"
+    "### <span style='color:LightSeaGreen'> Searching Mail. </span>"
    ]
   },
   {
@@ -349,6 +357,31 @@
    },
    "source": [
     "### <span style='color:LightSeaGreen'> Connect to your inbox. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    import imaplib\n",
+    "\n",
+    "    mailobj = imaplib.IMAP4_SSL('imap.gmail.com')\n",
+    "\n",
+    "    import getpass\n",
+    "\n",
+    "    email = getpass.getpass(\"Email: \")\n",
+    "\n",
+    "\n",
+    "    #Need to use app password\n",
+    "    password = getpass.getpass('Password: ')\n",
+    "\n",
+    "    mailobj.login(email,password)\n",
+    "\n",
+    "    #should get message \n",
+    "    #\" ('OK', [b'pkazeez@gmail.com authenticated (Success)'])\"\n",
+    "\n"
    ]
   },
   {
@@ -591,39 +624,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "import imaplib\n",
+    "\n",
+    "mailobj = imaplib.IMAP4_SSL('imap.gmail.com')\n",
+    "\n",
+    "import getpass\n",
+    "\n",
+    "email = getpass.getpass(\"Email: \")\n",
+    "\n",
+    "\n",
+    "#Need to use app password\n",
+    "password = getpass.getpass('Password: ')\n",
+    "\n",
+    "mailobj.login(email,password)\n",
+    "\n",
+    "### should get message \n",
+    "#\" ('OK', [b'pkazeez@gmail.com authenticated (Success)'])\"\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
