--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,20 +2,68 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "digital-nigeria",
+   "id": "colored-pasta",
    "metadata": {
     "heading_collapsed": true
    },
+   "source": [
+    "# <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "atmospheric-rouge",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "integral-leadership",
+   "metadata": {},
+   "source": [
+    "# <span style='color:SlateGray'> Simple Color heading AquaMarine. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "immune-cyprus",
+   "metadata": {},
+   "source": [
+    "    #<span style='color:AquaMarine'> Simple Color heading.. </span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "tribal-radiation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "digital-nigeria",
+   "metadata": {},
    "source": [
     "# <span style='color:Orange'> Simple Color heading Orange. </span>"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "auburn-commander",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "verbal-tradition",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "    <span style='color:Orange'> Simple Color heading Orange. </span>"
    ]
