--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "colored-pasta",
+   "id": "preliminary-recording",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
+    "# <span style='color:teal'> Simple Color heading teal. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "atmospheric-rouge",
+   "id": "scheduled-issue",
    "metadata": {
     "hidden": true
    },
@@ -22,16 +22,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integral-leadership",
-   "metadata": {},
+   "id": "persistent-capacity",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:MediumTurquoise'> Simple Color heading MediumTurquoise. </span>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "civilian-assist",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "checked-timber",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:SlateGray'> Simple Color heading AquaMarine. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "immune-cyprus",
-   "metadata": {},
+   "id": "creative-equilibrium",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "    #<span style='color:AquaMarine'> Simple Color heading.. </span>"
    ]
@@ -39,8 +63,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-radiation",
-   "metadata": {},
+   "id": "still-township",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -55,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "auburn-commander",
+   "id": "hairy-combine",
    "metadata": {},
    "outputs": [],
    "source": []
