--- a/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
+++ b/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
@@ -20,7 +20,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### <span style='color:LightSeaGreen'> imaplib. </span>"
+    "### <span style='color:MediumTurquoise'> imaplib. </span>"
    ]
   },
   {
@@ -170,7 +170,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### <span style='color:LightSeaGreen'> Searching Mail. </span>"
+    "### <span style='color:MediumTurquoise'> Searching Mail. </span>"
    ]
   },
   {
