--- a/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
+++ b/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
@@ -170,7 +170,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### <span style='color:MediumTurquoise'> Searching Mail. </span>"
+    "### <span style='color:LightSeaGreen'> Searching Mail. </span>"
    ]
   },
   {
@@ -352,18 +352,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### <span style='color:LightSeaGreen'> Connect to your inbox. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "    import imaplib\n",
     "\n",
@@ -387,9 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -409,9 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's now search and confirm if it is there:"
    ]
@@ -420,8 +412,7 @@
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -431,8 +422,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "source": [
     "We can now save what it has returned:"
@@ -441,9 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -463,9 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -484,9 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The data will be a list of unique ids."
    ]
@@ -495,8 +479,7 @@
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -508,8 +491,7 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -520,8 +502,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -532,8 +513,7 @@
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -542,9 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can use the built in email library to help parse this raw string."
    ]
@@ -553,8 +531,7 @@
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -565,8 +542,7 @@
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -576,9 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -597,9 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Excellent! We've successfully have been able to check our email's inbox , filter by some condition, and read the body of the text that was there. This will come in handy in the near future!"
    ]
@@ -607,17 +579,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# <span style='color:DarkCyan'> Excercise. </span>"
    ]
@@ -625,9 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import imaplib\n",
@@ -652,9 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
