--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,27 +2,55 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "preliminary-recording",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "id": "given-nudist",
+   "metadata": {},
+   "source": [
+    "# <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "recovered-latest",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "polar-strand",
+   "metadata": {},
    "source": [
     "# <span style='color:teal'> Simple Color heading teal. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "scheduled-issue",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "roman-clone",
+   "metadata": {},
    "source": [
     "    # <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "persistent-capacity",
+   "id": "marked-portfolio",
+   "metadata": {},
+   "source": [
+    "# <span style='color:MediumTurquoise'> Simple Color heading MediumTurquoise. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "biblical-sport",
+   "metadata": {},
+   "source": [
+    "    # <span style='color:MediumTurquoise'> Simple Color heading . </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "impaired-homework",
    "metadata": {
     "heading_collapsed": true
    },
@@ -33,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civilian-assist",
+   "id": "experimental-entity",
    "metadata": {
     "hidden": true
    },
@@ -42,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "checked-timber",
+   "id": "proud-authentication",
    "metadata": {
     "heading_collapsed": true
    },
@@ -52,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-equilibrium",
+   "id": "nominated-harvard",
    "metadata": {
     "hidden": true
    },
@@ -63,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "still-township",
+   "id": "spatial-scholarship",
    "metadata": {
     "hidden": true
    },
@@ -81,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hairy-combine",
+   "id": "revolutionary-luxury",
    "metadata": {},
    "outputs": [],
    "source": []
